svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
  labels:
    app: go-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: go-server
